# vioci-work

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  diagram.annotated.json  diagram.json  landsat.annotated.json  landsat.json  pyproject.toml  rc.cir  rc_result.json  render.yaml
.cursor/rules/: commit-to-github.mdc
docs/: architecture.md  cloud-setup.md  ir_spec.md  launch-physics-engine.md  production-deploy.md  vercel-deploy.md  writing_an_exporter.md
examples/: generate_fixtures.py
schemagraph/: __init__.py  api.py  autodetect.py  cli.py  config.py  registry.py
schemagraph/cv/: __init__.py  handdrawn.py  layout.py  ocr.py  primitives.py  vectorize.py
schemagraph/domain_exporters/: __init__.py  fenics_exporter.py  modelica_exporter.py  openfoam_exporter.py  orbital_exporter.py  spice_exporter.py  urdf_exporter.py
schemagraph/eval/: __init__.py  harness.py  report.py
schemagraph/export/: __init__.py  base.py  graphml_exporter.py  jsonld_exporter.py  networkx_exporter.py
schemagraph/export/contexts/: schemagraph.jsonld
schemagraph/ingest/: __init__.py  loaders.py  normalize.py
schemagraph/instruments/: __init__.py  annotator.py  catalog.py  catalog.yaml  cli.py  sheets.py
schemagraph/ir/: __init__.py  builder.py  ids.py  schema.py  validate.py
schemagraph/launch_compat/: __init__.py  assembler.py  engine.py  models.py  report.py  vehicles.py
schemagraph/launch_compat/loads/: __init__.py  parser.py
schemagraph/launch_compat/orbital/: __init__.py  delta_v.py
schemagraph/launch_compat/schema/: __init__.py  builder.py  field_catalog.py  satellite_launch_schema.json  validate.py
schemagraph/launch_compat/structural/: __init__.py  material_db.py  static_fea.py
schemagraph/launch_compat/tests/: __init__.py  registry.py  suite.py
schemagraph/launch_compat/vehicles/: __init__.py  ariane6.json  electron.json  falcon9.json  loader.py  starship.json  vulcan.json
schemagraph/physics/: __init__.py  annotators.py  equations.py  parametric.py  units.py
schemagraph/simulate/: __init__.py  analytic_rc.py  base.py  fenics_sim.py  ngspice_sim.py  openfoam_sim.py
schemagraph/vlm/: __init__.py  anthropic_provider.py  base.py  ensemble.py  fake_provider.py  google_provider.py  openai_provider.py
schemagraph/vlm/prompts/: __init__.py
scripts/: check_cloud.py  migrate_local_to_cloud.py
server/: __init__.py  annotation_detect.py  annotation_schemas.py  annotation_service.py  auth.py  cloud_files.py  config.py  deps.py  events.py  folder_access.py  gcp_auth.py  image_enhance.py  launch_storage.py  main.py  models.py  project_access.py  schema_registry.py  schema_registry_sql.py  schemas.py  settings.py  state.py  storage.py  workspace.py
server/routes/: annotations.py  auth.py  chat.py  folders.py  launch_compat.py  parse.py  projects.py  schema_registry.py  sheets.py  simulate.py  ws.py
sheets/: multispectral_scanner.75b3a647b4.jsonl
tests/: conftest.py  test_annotation_detect_leader.py  test_autodetect.py  test_beam_fea.py  test_cloud_files.py  test_cv_primitives.py  test_domain_exporters.py  test_ensemble.py  test_ensure_source_image.py  test_eval_harness.py  test_fixtures_e2e.py  test_gcp_auth.py  test_google_provider.py  test_handdrawn.py  test_ir_schema.py  test_launch_compat.py  test_launch_loads_parser.py  test_launch_readiness_import.py  test_launch_schema.py  test_physics_phase3.py  test_pipeline_e2e.py  test_registry.py  test_schema_registry.py  test_schema_registry_sql.py  test_schematic_labels.py  test_simulators.py  test_spacecraft.py  test_state_db.py  test_units.py  test_webapp_smoke.py
webapp/: index.html  package-lock.json  package.json  vercel.json
webapp/scripts/: sync-vercel-api-rewrite.mjs
webapp/src/: App.tsx  auth.css  brand.ts  styles.css
webapp/src/api/: auth.ts  client.ts  reference.ts  types.ts
webapp/src/components/: AnnotationPanel.tsx  AppShell.tsx  ChatPanel.tsx  ClosableTabBar.tsx  CommandPalette.tsx  ExplorerRegistryPreview.tsx  ExplorerTree.tsx  FullscreenIcons.tsx  GraphView.tsx  ImageOverlay.tsx  IntegrationTerminal.tsx  LaunchAnalysisConsole.tsx  LaunchCompatPanel.tsx  LaunchLoadCurves.tsx  LaunchStressMap.tsx  LaunchTestMatrix.tsx  LoadingIndicator.tsx  NodeInspector.tsx  PartDataFieldsEditor.tsx  ProjectImage.tsx  ProtectedRoute.tsx  SatelliteProfilePanel.tsx  SchemaNode.tsx  SchemaRegistryPanel.tsx  SchemaSpreadsheet.tsx  SchematicCanvas.tsx  SheetUploader.tsx  SimulatePanel.tsx  SubsystemComponentList.tsx
webapp/src/hooks/: useUndoStack.ts  useWorkspaceDock.ts
webapp/src/lib/: annotations.ts  launchReadiness.ts  launchReport.ts  launchVehicles.ts  partDataFields.ts  (+9 more)
(+25 files in other folders)
